# llm_jsoni18

./: LICENSE  Makefile  README.md  i18n_conv.spec  pyproject.toml
llm_jsoni18/: cli.py  core.py
llm_jsoni18/llm/: base.py  loader.py
plugins/: Tmx_fmt.py  __init__.py  claude ai.py  ollama.py  openai.py  pyc.py
